# telco-regulator-pipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/workflows/: quality-gate.yml
airflow/: requirements.txt
airflow/dags/: bronze_mobile_domains_ingestion.py  bronze_segment_domains_ingestion.py  bronze_subscribers_ingestion.py  hello_world.py  monthly_reporting_pipeline.py
airflow/dags/lib/: audit.py  constants.py  minio_helpers.py  mobile_domain_ingestion.py  postgres_helpers.py  segment_domain_ingestion.py  subscribers_ingestion.py
data_generator/telco_generator/: anomalies.py  cli.py  config.py  csv_validation.py  ingestion_paths.py  orchestrator.py  pipeline_runtime.py
data_generator/telco_generator/constants/: operators.py  regions.py  trajectories.py
data_generator/telco_generator/domains/: qos.py  revenue.py  subscribers.py  traffic_internet.py  traffic_sms.py  traffic_voice.py
data_generator/tests/: test_csv_validation.py  test_generator_reliability.py  test_ingestion_paths.py  test_monthly_runtime.py  test_pipeline_runtime.py
dbt_project/: dbt_project.yml
dbt_project/tests/: test_mart_operator_scorecard_market_share_bounds.sql  test_mart_regulator_kpis_nonnegative.sql
docs/: ALERT_POLICY.md  CONFIGURATION_CONTRACT.md  METABASE_DASHBOARD_PLAN.md  OPERATIONS_RUNBOOK.md  PRODUCTION_PROFILE.md  PRODUCTION_RELEASE_RUNBOOK.md  PROJECT_PAUSE_HANDOFF_2026-05-08.md  RELEASE_v0.9.1_STABILIZATION.md  STABILIZATION_CHECKPOINT.md
(+49 files in other folders)
